  * Some tweaks to newlist.8 (Closes: #485382).
  * Make quilt usage more dpkg source format 3.0 compatible
    and refresh all patches (Closes: #485253).
  * Checked for policy 3.8.0, no changes necessary.
  * Fix a number of buglets in 99_js_templates.patch.
  * Don't install stop symlinks in runlevels 0 and 6; the default
    sigterm functions very well to stop qrunner.

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 07 Jul 2008 23:15:42 +0200

mailman (1:2.1.10-2) unstable; urgency=low

  * Apply upstream patch to fix regression in cmd_subscribe
    so that email subscribe to the -subscribe or -join address or the
    -request address with a bare 'subscribe' command results in the message
    being shunted.

 -- Thijs Kinkhorst <thijs@debian.org>  Thu, 24 Apr 2008 19:30:49 +0200

mailman (1:2.1.10-1) unstable; urgency=low

  * New upstream release.

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 21 Apr 2008 22:43:08 +0200

mailman (1:2.1.10~b4-1) unstable; urgency=low

  * New upstream beta release.

 -- Thijs Kinkhorst <thijs@debian.org>  Fri, 14 Mar 2008 17:54:52 +0100

mailman (1:2.1.10~b3-1) unstable; urgency=low

  * New upstream beta release.
    + Restricts XSS by list admins, CVE-2008-0564.
    + Obsoletes 56_fix_de_broken_links.patch.
    + Obsoletes 81_backport_export.dpatch.
    + Makes list handling case sensitivity consistent (closes: #446257).
    + Archives do not drop headerless mime parts (Closes: #450399).
    + check_perms checks more perms (Closes: #260224).

 -- Thijs Kinkhorst <thijs@debian.org>  Fri, 22 Feb 2008 00:09:11 +0100

mailman (1:2.1.9-10) unstable; urgency=low

  * Be quiet when logrotation succeeds, prevents Cron spam (closes: #456954).
  * Fix typo in postinst message (closes: #458981).
  * Switch to debhelper level 6.

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 14 Jan 2008 12:10:05 +0100

mailman (1:2.1.9-9) unstable; urgency=low

  * Drop suggests for obsolete python-*-codecs and drop versioned