@@ -16,8 +16,10 @@ mailman (1:2.1.11-1) UNRELEASED; urgency=low
   * Fix a number of buglets in 99_js_templates.patch.
   * Don't install stop symlinks in runlevels 0 and 6; the default
     sigterm functions very well to stop qrunner.
+  * Clarify that MTA="None" is right when using
+    postfix-to-mailman.py (Closes: #488644).
 
- -- Thijs Kinkhorst <thijs@debian.org>  Mon, 07 Jul 2008 23:15:42 +0200
+ -- Thijs Kinkhorst <thijs@debian.org>  Mon, 07 Jul 2008 23:58:33 +0200
 
 mailman (1:2.1.10-2) unstable; urgency=low
 
